tdf#160375 Base displays and gives the full name of the table

Change-Id: Icc8c6d85cc5a88461b7bd02487513e0e864bacef
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/166057
Tested-by: Jenkins
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>